# friday

./: .gitignore  CLAUDE.md  README.md  build.sh  plan.md  pyproject.toml
.claude/commands/: briefing.md  recap.md  review.md  triage.md
config/: friday.conf.example
launchd/: com.friday.telegram-bot.plist
scripts/: bot-service.sh
src/friday/: __init__.py  calendar.py  cli.py  config.py  recap.py  telegram_bot.py  telegram_format.py  telegram_handlers.py  telegram_states.py  ticktick.py  workflows.py
src/friday/adapters/: __init__.py  claude_cli.py  composite_calendar.py  file_journal.py  gcalcli.py  google_calendar.py  icalpal.py  ticktick_api.py
src/friday/core/: __init__.py  briefing.py  calendar.py  recap.py  tasks.py
src/friday/ports/: __init__.py  calendar_repo.py  journal_store.py  llm_service.py  task_repo.py
templates/: daily-briefing.md  deep-recap.md  task-triage.md  weekly-review.md
tests/: __init__.py  test_briefing.py  test_calendar.py  test_gcalcli.py  test_google_calendar.py  test_recap.py  test_tasks.py  test_workflows.py
