[project]
name = "friday"
version = "0.1.0"
description = "Personal assistant CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
friday = "friday.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]

[tool.hatch.build.targets.sdist]
include = ["src/friday"]
